# terminal-todo

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO  TODO.txt  install.sh  todo.txt  uninstall.sh
scripts/: build  build_and_run  clean  clean_and_build  run
src/: main.c  main.cpp  save.c  task.c  term.c  todo.h
